test/typecheck/errors/bad-views29.boa
o: output sum of int;
v: table [string][int]of int;
r: v._row;

x:= 5;
v2 := v["abc"][3][2];
r2: v2._row;

v2 >> r2;

o << r2._1;

o << 1;